--- a/index.html
+++ b/index.html
@@ -7,19 +7,37 @@
   </head>
 
   <body>
-  	<h1>Hello world!</h1>
-  	<h2>This is less important.</h2>
+  	<h1>Nice to meet you!</h1>
+  	<h2>My name is Ashley.</h2>
 
-  	<p>Hi hello. Nice to meet you.</p>
+  	<div>
 
-  	<a href="http://www.google.com">this is my link</a>
+  	   <h3>A few things about me.</h3>
+  	   <p>I have a passion for travel. Whenever I go to a new place I just love exploring and seeing new things. I feel the most important thing about life is experiences.</p>
+  	   <p>I also really care about animals. I have grown up helping my dad rescue animals on the street and find them good homes. It is so rewarding.</p>
+  	   <p>Lastly I love to dance. There is nothing like letting lose on the dance floor.</p>
 
-    <h3>Stuff</h3>
-  	<ul>
-  		<li>Pasta</li>
-  		<li>Dogs</li>
-  		<li>Places</li>
-  	</ul>
+  	</div>
+
+    <div>
+
+       <h3>Places I want to go</h3>
+  	   <ul>
+  		 <li>New Zealand</li>
+  		 <li>Cambodia</li>
+  		 <li>Bali</li>
+  	  </ul>
+
+    </div>
+
+    <div>
+    	<h4>Now it's your turn!</h4>
+    	<p>Contact me, so I can know about you.</p>
+    	<input type = "email" placeholder = "Your email">
+    	<input type = "Submit">
+
+    </div>
+
   </body>
 
 </html>
